--- a/auction-website-frontend/package.json
+++ b/auction-website-frontend/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
+    "@nextui-org/system": "^2.2.5",
+    "@nextui-org/table": "^2.0.39",
+    "@nextui-org/theme": "^2.2.9",
     "auction-website-frontend": "file:",
+    "framer-motion": "^11.3.21",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
+    "nextjs-cors": "^2.2.0",
     "react": "^18",
     "react-dom": "^18"
   },
