--- a/auction_web_api/requirements.txt
+++ b/auction_web_api/requirements.txt
@@ -2,5 +2,7 @@ djangorestframework==3.15.2
 pyJWT==2.9.0
 requests==2.32.3
 pytz==2024.1
-django-cors-headers=4.4.0
+django-cors-headers==4.4.0
 tzdata==2024.1
+gunicorn==23.0.0
+django==5.1
