- Migrated to uvicorn for AGI

--- a/auction_web_api/requirements.txt
+++ b/auction_web_api/requirements.txt
@@ -1,7 +1,23 @@
+alembic==1.13.2
+attrs==24.2.0
+Automat==24.8.1
+autobahn==24.4.2
 djangorestframework==3.15.2
+daphne==4.1.2
+channels==4.1.0
+cryptography==43.0.0
+cffi==1.17.0
+constantly==23.10.4
+hyperlink==21.0.0
+incremental==24.7.2
 pyJWT==2.9.0
 requests==2.32.3
 pytz==2024.1
+pyasn1==0.6.0
+channels_redis==4.2.0
+pyasn1-modules==0.4.0
+pycparser==2.22
+pyopenssl==24.2.1
 django-cors-headers==4.4.0
 tzdata==2024.1
 gunicorn==23.0.0
@@ -10,3 +26,11 @@ celery==5.4.0
 alembic==1.13.2
 django-celery-beat==2.6.0
 redis==5.0.8
+pyOpenSSL==24.2.1
+service-identity==24.1.0
+setuptools==73.0.1
+twisted==24.7.0
+txaio==23.1.1
+uvicorn==0.30.6
+websockets==13.0
+zope-interface==7.0.1
